--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "VK",
-  "license": "MIT",
+  "license": "Apache",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/vk-uni/vk-uni-cloud-router.git"
