--- a/cloudfunctions-aliyun/router/package.json
+++ b/cloudfunctions-aliyun/router/package.json
@@ -12,10 +12,7 @@
   "dependencies": {
     "config": "file:../common/config",
     "uni-id": "file:../common/uni-id",
-    "vk-unicloud": "file:../common/vk-unicloud",
-    "@alicloud/pop-core": "^1.7.9",
-    "form-data": "^3.0.0",
-    "nodemailer": "^6.4.11"
+    "vk-unicloud": "file:../common/vk-unicloud"
   },
   "private": true
 }
