--- a/uniCloud-aliyun/cloudfunctions/router/package.json
+++ b/uniCloud-aliyun/cloudfunctions/router/package.json
@@ -15,4 +15,9 @@
     "vk-unicloud": "file:../common/vk-unicloud"
   },
   "private": true
-}
+,"cloudfunction-config":{
+	"memorySize" : 256,
+	"path" : "",
+	"timeout" : 60,
+	"triggers" : []
+}}
