--- a/uniCloud-aliyun/cloudfunctions/router/package.json
+++ b/uniCloud-aliyun/cloudfunctions/router/package.json
@@ -14,10 +14,11 @@
     "uni-id": "file:../common/uni-id",
     "vk-unicloud": "file:../common/vk-unicloud"
   },
-  "private": true
-,"cloudfunction-config":{
-	"memorySize" : 256,
-	"path" : "",
-	"timeout" : 60,
-	"triggers" : []
-}}
+  "private": true,
+  "cloudfunction-config": {
+    "memorySize": 256,
+    "path": "",
+    "timeout": 60,
+    "triggers": []
+  }
+}
