--- a/manifest.json
+++ b/manifest.json
@@ -80,6 +80,7 @@
     },
     "h5" : {
         "title" : "（开箱即用）uniCloud-云函数路由模式 - 带过滤器 - 支持权限拦截 - 已集成uni-id",
-        "domain" : "vkunicloud.fsq.pub"
+        "domain" : "vkunicloud.fsq.pub",
+        "template" : "template.h5.html"
     }
 }
