--- a/uniCloud-aliyun/cloudfunctions/common/uni-id/config.json
+++ b/uniCloud-aliyun/cloudfunctions/common/uni-id/config.json
@@ -14,6 +14,9 @@
 			"weixin" : {
 				"appid" : "weixin appid",
 				"appsecret" : "weixin appsecret"
+			},
+			"apple":	{
+				"bundleId": "your APP bundleId"
 			}
 		}
 	},
