--- a/uniCloud-aliyun/cloudfunctions/common/vk-unicloud/package.json
+++ b/uniCloud-aliyun/cloudfunctions/common/vk-unicloud/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vk-unicloud",
-  "version": "1.11.0",
-  "description": "【云函数端SDK】VK云函数路由模式uniCloud开发框架，在router目录下执行 npm i vk-unicloud 进行安装和升级",
+  "version": "1.11.2",
+  "description": "在router目录下执行 npm i vk-unicloud 进行安装和升级",
   "main": "index.js",
   "homepage": "https://gitee.com/vk-uni/vk-uni-cloud-router.git",
   "repository": {
