--- a/uniCloud-aliyun/cloudfunctions/router/package.json
+++ b/uniCloud-aliyun/cloudfunctions/router/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "config": "file:../common/config",
-    "uni-id": "file:../common/uni-id",
-    "vk-unicloud": "file:../common/vk-unicloud"
+    "uni-id": "file:../../../uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id",
+    "uni-pay": "file:../../../uni_modules/uni-pay/uniCloud/cloudfunctions/common/uni-pay",
+    "vk-unicloud": "file:../../../uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud"
   },
   "private": true,
   "cloudfunction-config": {
