--- a/uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id/config.json
+++ b/uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id/config.json
@@ -14,6 +14,9 @@
 			"weixin" : {
 				"appid" : "weixin appid",
 				"appsecret" : "weixin appsecret"
+			},
+			"apple":	{
+				"bundleId": "your APP bundleId"
 			}
 		}
 	},
@@ -39,6 +42,11 @@
 			"codeExpiresIn": 300,
 			"smsKey": "your sms key",
 			"smsSecret": "your sms secret"
+		},
+		"univerify": {
+			"appid":"your appid",
+			"apiKey": "your apiKey",
+			"apiSecret": "your apiSecret"
 		}
 	}
 }
