--- a/uniCloud-aliyun/cloudfunctions/router/package.json
+++ b/uniCloud-aliyun/cloudfunctions/router/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "file:../common/config",
+    "uni-config-center": "file:../../../uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center",
     "uni-id": "file:../../../uni_modules/uni-id/uniCloud/cloudfunctions/common/uni-id",
     "uni-pay": "file:../../../uni_modules/uni-pay/uniCloud/cloudfunctions/common/uni-pay",
     "vk-unicloud": "file:../../../uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud"
