--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
@@ -4,9 +4,9 @@
 	"tokenExpiresIn": 7200,
 	"tokenExpiresThreshold": 600,
 	"passwordErrorLimit": 6,
-	"bindTokenToDevice": true,
+	"bindTokenToDevice": false,
 	"passwordErrorRetryTime": 3600,
-	"autoSetInviteCode": false,
+	"autoSetInviteCode": true,
 	"forceInviteCode": false,
 	"app-plus": {
 		"tokenExpiresIn": 2592000,
