--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "id": "vk-cloud-router",
     "displayName": "【开箱即用】vk-unicloud-router - 云函数路由模式开发框架 - 已集成uni-id 框架内置了众多API、工具包，为你的业务扫平障碍。使你的项目刚起步进度就是50%",
-    "version": "1.8.11",
-    "description": "不仅仅局限于框架，也是云端一体项目模板，已集成uni-id支持云函数url化。众多现成API供你使用（登录、注册、短信、微信API等等）为你的业务扫平障碍。使你的项目刚起步进度就是50% ，内置小白也能轻松上手的数据库API。",
+    "version": "1.8.12",
+    "description": "不仅仅局限于框架，也是云端一体项目模板，已集成uni-id支持云函数url化。众多现成API供你使用（登录、注册、短信、微信服务端API等等）为你的业务扫平障碍。使你的项目刚起步进度就是50% ，内置小白也能轻松上手的数据库API。",
     "keywords": [
         "vk-unicloud-router",
         "云函数路由",
