--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/package.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/package.json
@@ -1,9 +1,9 @@
 {
   "name": "uni-config-center",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "配置中心",
   "main": "index.js",
   "keywords": [],
-  "author": "fxy060608",
+  "author": "DCloud",
   "license": "Apache-2.0"
 }
