--- a/uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud/package.json
+++ b/uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "vk-unicloud",
-  "version": "2.2.2",
-  "description": "【云函数端SDK】VK云函数路由模式uniCloud开发框架，在router目录下执行 npm i vk-unicloud 进行安装和升级",
-  "main": "index.js",
-  "homepage": "https://gitee.com/vk-uni/vk-uni-cloud-router.git",
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitee.com/vk-uni/vk-uni-cloud-router.git"
-  },
-  "author": "VK",
-  "license": "Apache-2.0"
+	"name": "vk-unicloud",
+	"version": "2.2.2",
+	"description": "【云函数端SDK】VK云函数路由模式uniCloud开发框架，在router目录下执行 npm i vk-unicloud 进行安装和升级",
+	"main": "index.js",
+	"homepage": "https://gitee.com/vk-uni/vk-uni-cloud-router.git",
+	"repository": {
+		"type": "git",
+		"url": "git+https://gitee.com/vk-uni/vk-uni-cloud-router.git"
+	},
+	"author": "VK",
+	"license": "Apache-2.0",
+	"dependencies": {
+		"uni-config-center": "file:../../../../../uni-config-center/uniCloud/cloudfunctions/common/uni-config-center",
+		"uni-id": "file:../../../../../uni-id/uniCloud/cloudfunctions/common/uni-id",
+		"uni-pay": "file:../../../../../uni-pay/uniCloud/cloudfunctions/common/uni-pay"
+	}
 }
