--- a/.npmignore
+++ b/.npmignore
@@ -3,3 +3,4 @@ scripts
 unpackage
 node_modules
 package-lock.json
+uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-pay/
