--- a/uni_modules/vk-unicloud/package.json
+++ b/uni_modules/vk-unicloud/package.json
@@ -1,8 +1,8 @@
 {
   "id": "vk-unicloud",
-  "displayName": "vk-unicloud-router开发框架核心库 - 已集成uni-id 框架内置了众多API、工具包，为你的业务扫平障碍。使你的项目刚起步进度就是50%",
-  "version": "2.2.4",
-  "description": "此为vk-unicloud-router开发框架核心库（新手建议直接下载完整框架项目）已集成uni-id支持云函数url化。众多现成API，内置小白也能轻松上手的数据库API。",
+  "displayName": "vk-unicloud-router开发框架核心库 - 已集成uni-id 框架内置了众多API。",
+  "version": "2.2.6",
+  "description": "此为vk-unicloud-router框架核心库（新手建议下载完整框架项目）已集成uni-id支持云函数url化。众多现成API，内置小白也能轻松上手的数据库API。使你项目刚起步进度就是百分之50",
   "keywords": [
     "vk-unicloud-router",
     "云函数路由",
@@ -39,7 +39,7 @@
     "npmurl": ""
   },
   "uni_modules": {
-    "dependencies": ["uni-id","uni-pay"],
+    "dependencies": ["uni-config-center","uni-id","uni-pay"],
     "encrypt": [],
     "platforms": {
       "cloud": {
