--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "【开箱即用】vk-uniCloud-router - 云函数路由模式 - uniCloud开发框架 - 已集成uni-id",
-    "appid" : "",
+    "appid" : "__UNI__01F080F",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -83,7 +83,8 @@
         "title" : "（开箱即用）uniCloud-云函数路由模式 - 带过滤器 - 支持权限拦截 - 已集成uni-id",
         "template" : "template.h5.html",
         "devServer" : {
-          "disableHostCheck" : true
+            "disableHostCheck" : true
         }
-    }
+    },
+    "vueVersion" : "2"
 }
