--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
@@ -12,32 +12,40 @@
     "tokenExpiresIn": 604800,
     "oauth": {
       "weixin": {
-        "appid": "",
-        "appsecret": ""
+        "appid": "app开放平台appid",
+        "appsecret": "app开放平台appsecret"
       }
     }
   },
   "mp-weixin": {
     "oauth": {
       "weixin": {
-        "appid": "",
-        "appsecret": ""
+        "appid": "微信小程序appid",
+        "appsecret": "微信小程序appsecret"
+      }
+    }
+  },
+  "h5-weixin": {
+    "oauth": {
+      "weixin": {
+        "appid": "微信公众号appid",
+        "appsecret": "微信公众号appsecret"
       }
     }
   },
   "mp-alipay": {
     "oauth": {
       "alipay": {
-        "appid": "",
-        "privateKey": ""
+        "appid": "支付宝小程序appid",
+        "privateKey": "支付宝小程序privateKey"
       }
     }
   },
   "mp-qq": {
     "oauth": {
       "qq": {
-        "appid": "",
-        "appsecret": ""
+        "appid": "qq小程序appid",
+        "appsecret": "qq小程序appsecret"
       }
     }
   },
@@ -50,9 +58,9 @@
       "templateId": "你的短信模板ID"
     },
     "univerify": {
-      "appid": "your appid",
-      "apiKey": "your apiKey",
-      "apiSecret": "your apiSecret"
+      "appid": "App一键登录appid",
+      "apiKey": "App一键登录apiKey",
+      "apiSecret": "App一键登录apiSecret"
     }
   }
 }
