--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
@@ -8,6 +8,7 @@
   "passwordErrorRetryTime": 3600,
   "autoSetInviteCode": true,
   "forceInviteCode": false,
+  "preferedAppPlatform":"app-plus",
   "app-plus": {
     "tokenExpiresIn": 604800,
     "oauth": {
