--- a/uni_modules/vk-unicloud/package.json
+++ b/uni_modules/vk-unicloud/package.json
@@ -1,11 +1,11 @@
 {
   "id": "vk-unicloud",
   "displayName": "vk-unicloud-router开发框架核心库 - 已集成uni-id 框架内置了众多API。",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "description": "此为vk-unicloud-router框架核心库（新手建议下载完整框架项目）已集成uni-id支持云函数url化。众多现成API，内置小白也能轻松上手的数据库API。使你项目刚起步进度就是百分之50",
   "keywords": [
     "vk-unicloud-router",
-    "云函数路由",
+    "云函数路由、云对象路由",
     "vk云开发",
     "内置uni-id、uview、数据库baseDao",
     "内置众多API、工具包"
