--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
@@ -11,6 +11,7 @@
 	"forceInviteCode": false,
 	"preferedAppPlatform": "app-plus",
 	"preferedWebPlatform": "h5",
+	"removeDcloudAppid": false,
 	"app-plus": {
 		"tokenExpiresIn": 604800,
 		"oauth": {
