--- a/uni_modules/uni-id/package.json
+++ b/uni_modules/uni-id/package.json
@@ -1,7 +1,7 @@
 {
   "id": "uni-id",
   "displayName": "uni-id",
-  "version": "3.3.26",
+  "version": "3.3.28",
   "description": "简单、统一、可扩展的用户中心",
   "keywords": [
     "uniid",
@@ -14,11 +14,7 @@
   "engines": {
     "HBuilderX": "^3.1.0"
   },
-  "dcloudext": {
-    "category": [
-      "uniCloud",
-      "云函数模板"
-    ],
+"dcloudext": {
     "sale": {
       "regular": {
         "price": "0.00"
@@ -35,7 +31,8 @@
       "data": "无",
       "permissions": "无"
     },
-    "npmurl": ""
+    "npmurl": "",
+    "type": "unicloud-template-function"
   },
   "uni_modules": {
     "dependencies": ["uni-config-center"],
