--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "id": "vk-cloud-router",
     "displayName": "【开箱即用】vk-unicloud-router - 云函数路由模式开发框架 - 已集成uni-id 框架内置了众多API、工具包，为你的业务扫平障碍。",
-    "version": "2.11.9",
+    "version": "2.11.10",
     "description": "这是一个unicloud快速开发框架+项目模板（已包含核心库）支持URL化，众多现成API供你使用（登录、注册、短信、微信百度服务端API等等）为你的业务扫平障碍。内置小白也能轻松上手的数据库API。",
     "keywords": [
         "vk-unicloud-router",
@@ -26,10 +26,6 @@
         "HBuilderX": "^3.1.2"
     },
     "dcloudext": {
-        "category": [
-            "uniCloud",
-            "云端一体项目模板"
-        ],
         "sale": {
             "regular": {
                 "price": "0.00"
@@ -46,7 +42,8 @@
             "data": "插件不采集任何数据",
             "permissions": "无"
         },
-        "npmurl": "https://vkdoc.fsq.pub/client/"
+        "npmurl": "https://vkdoc.fsq.pub/client/",
+        "type": "unicloud-template-project"
     },
     "uni_modules": {
         "platforms": {
