【优化】新版阿里云空间通过代理请求微信公众号API细节处理

--- a/uniCloud-aliyun/cloudfunctions/router/package.json
+++ b/uniCloud-aliyun/cloudfunctions/router/package.json
@@ -18,11 +18,11 @@
   "cloudfunction-config": {
     "concurrency": 1,
     "memorySize": 256,
-    "keepRunningAfterReturn": false,
     "path": "",
     "timeout": 60,
     "triggers": [],
-    "runtime": "Nodejs12"
+    "runtime": "Nodejs12",
+    "keepRunningAfterReturn": false
   },
   "extensions": {}
 }
