--- a/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
+++ b/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/uni-id/config.json
@@ -16,40 +16,40 @@
 		"tokenExpiresIn": 604800,
 		"oauth": {
 			"weixin": {
-				"appid": "app开放平台appid",
-				"appsecret": "app开放平台appsecret"
+				"appid": "",
+				"appsecret": ""
 			}
 		}
 	},
 	"mp-weixin": {
 		"oauth": {
 			"weixin": {
-				"appid": "微信小程序appid",
-				"appsecret": "微信小程序appsecret"
+				"appid": "",
+				"appsecret": ""
 			}
 		}
 	},
 	"h5-weixin": {
 		"oauth": {
 			"weixin": {
-				"appid": "微信公众号appid",
-				"appsecret": "微信公众号appsecret"
+				"appid": "",
+				"appsecret": ""
 			}
 		}
 	},
 	"mp-alipay": {
 		"oauth": {
 			"alipay": {
-				"appid": "支付宝小程序appid",
-				"privateKey": "支付宝小程序privateKey"
+				"appid": "",
+				"privateKey": ""
 			}
 		}
 	},
 	"mp-qq": {
 		"oauth": {
 			"qq": {
-				"appid": "qq小程序appid",
-				"appsecret": "qq小程序appsecret"
+				"appid": "",
+				"appsecret": ""
 			}
 		}
 	},
@@ -57,14 +57,14 @@
 		"sms": {
 			"name": "重要",
 			"codeExpiresIn": 180,
-			"smsKey": "你的smsKey",
-			"smsSecret": "你的smsSecret",
-			"templateId": "你的短信模板ID"
+			"smsKey": "",
+			"smsSecret": "",
+			"templateId": ""
 		},
 		"univerify": {
-			"appid": "App一键登录appid",
-			"apiKey": "App一键登录apiKey",
-			"apiSecret": "App一键登录apiSecret"
+			"appid": "",
+			"apiKey": "",
+			"apiSecret": ""
 		}
 	}
 }
