--- a/uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud/package.json
+++ b/uni_modules/vk-unicloud/uniCloud/cloudfunctions/common/vk-unicloud/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vk-unicloud",
-  "version": "2.15.1",
+  "version": "2.15.2",
   "description": "【云函数端SDK】VK云函数路由模式uniCloud开发框架，在router目录下执行 npm i vk-unicloud 进行安装和升级",
   "main": "index.js",
   "homepage": "https://gitee.com/vk-uni/vk-uni-cloud-router.git",
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "git+https://gitee.com/vk-uni/vk-uni-cloud-router.git"
   },
+  "files": [
+    "dist"
+  ],
   "author": "VK",
   "license": "Apache-2.0"
 }
