--- a/manifest.json
+++ b/manifest.json
@@ -60,7 +60,7 @@
         "appid" : "",
         "setting" : {
             "urlCheck" : false,
-            "es6" : true,
+            "es6" : false,
             "postcss" : true,
             "minified" : true,
             "checkSiteMap" : false
@@ -88,7 +88,7 @@
             "urlCheck" : false,
             "minified" : true,
             "postcss" : true,
-            "es6" : true
+            "es6" : false
         }
     },
     "uniStatistics" : {
@@ -107,7 +107,7 @@
             "urlCheck" : false,
             "minified" : true,
             "postcss" : true,
-            "es6" : true
+            "es6" : false
         }
     }
 }
