changelog.new.md

--- a/manifest.json
+++ b/manifest.json
@@ -109,5 +109,11 @@
             "postcss" : true,
             "es6" : false
         }
+    },
+    "networkTimeout": {
+      "request": 60000,
+      "connectSocket": 60000,
+      "uploadFile": 60000,
+      "downloadFile": 60000
     }
 }
